cc/css/style.css
/* ... */
#filters {
  z-index: 3;
  width:100%;
  position: -webkit-sticky;
  position: sticky;
  padding-top: .25em;
  top: calc(10px + var(--topNav-height));
  transition: top 0.1s ease-in-out;
  -o-transition: top 0.1s ease-in-out;
  -ms-transition: top 0.1s ease-in-out;
  -moz-transition: top 0.1s ease-in-out;
  -webkit-transition: top 0.1s ease-in-out;
}
#filters.hidden {
  top: -1000%;
}

@media (hover: hover) {
  body #filters.hidden.canSlide:hover,
  body #filters.hidden.canSlide.active,
  body #topNav:hover + #filters.hidden.canSlide {
    top: calc(10px + var(--topNav-height));
  }
  body #filters.canSlide,
  body #filters:not(.canSlide):not(.hidden) {
    border-bottom: 1px solid white;
    margin-bottom: -1px;
    box-shadow: 0 3px 8px #222222;
  }
}

#checkboxes.hidden {
  display: none;
}

#filters {
  display: inline-block;
}

.filterSlider {
  -webkit-appearance: none; /* Override default CSS styles */
  appearance: none;
  /* height: 25px; /* Specified height */
  height: 1em;
  background: #808080; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
  transition: opacity 0.2s;
  border-radius: .5em;
}
/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.filterSlider::-webkit-slider-thumb {
  -webkit-appearance: none; 
  appearance: none;
  width: 1.3em;
  height: 1.3em; 
  background: #dddddd; 
  cursor: pointer;
  border-radius: 50%;
}

.filterSlider::-moz-range-thumb {
  width: 1.3em;
  height: 1.3em;
  background: #dddddd;
  cursor: pointer;
  border-radius: 50%;
}

#raritySlider {
  width: 7em;
}
#opcountSlider {
  width: 13em;
}
#opcountDisp {
  width: 1em;
  display: inline-block;
  text-align: right;
}

img:not(.chartjs-size-monitor).hidden:not(.forceShow),
div:not(.chartjs-size-monitor).hidden:not(.forceShow) {
  display: none;
}
#legend {
  /* margin: 8px 0 0 8px; */
  margin-left: 2rem;
  flex-grow: 1;
  align-self: center;
  display: flex;
}

#legend > * {
	margin: 0 .125em;
}

#pageTitle {
  font-size: 2.3em;
  line-height: var(--topNav-height);
  /* margin: 0 0 .5em 0; */
}

body {
  margin-top: calc(10px + var(--topNav-height));
  /* margin-top: 4rem; */
}

body.soul-mode .glightbox-container .gslide.current .gslide-media::after {
    font-size: 1.5em;
    content: "SOVL: " attr(data-soul);
    position: absolute;
    font-weight: 500;
	text-align: center;
	margin: auto;
	color: #0ff;
	width: 100%;
	pointer-events: none;
	white-space: nowrap;
	left: 50%;
	transform: translateX(-50%);
	bottom: 0;
}
body.soul-mode .cardContainer::after {
    content: attr(data-soul);
    position: absolute;
    /* transform: translate(calc(-256px + 6px),calc(144px - 100% - 6px)); */
	left: 0;
	bottom: 0;
	padding: .25em;
	pointer-events: none;
	font-weight: 700;
	color: #0ff;
	background: #000a;
}
.gslide:not(.current) .gslide-description,
.gslide:not([data-dupe]) .gslide-description {
	border-color: 0;
	pointer-events: none;
}
body.soul-mode #deco {
    position: fixed;
    width: 100%;
    height: calc(100% - var(--topNav-height) - 10px);
    box-shadow: inset 0 0 3em 0em #0ff2;
    z-index: 99;
    pointer-events: none;
}

#deco {
	display:none;
}

#filters > div:first-child {
	margin-left: .25em;
}

.clearView.hidden {
	display:none;
}
.clearView {
	display: flex;
	flex-wrap: wrap;
	background: linear-gradient(0deg, #555555, #666666);
	margin: .15em 0;
	align-items: center;
	border-radius: .2em;
}
.cardContainer .clearView {
	display: none;
}
.clearView .opImgWrapper {
	margin-right: .5em;
	position: relative;
}
.clearView .opImg {
	height: var(--large-operator-image-size);
	width: var(--large-operator-image-size);
	background: #0004;
	border-radius: .2em;
	box-shadow: inset 0 0 1pt 1pt #0002;
}
.clearView .opImg.supportOp {
	background: #c27f0baa;
}
.clearView .cardContainer img{
	height: var(--large-operator-image-size);
	width: calc(16 / 9 * var(--large-operator-image-size));
}
.clearView .cardContainer {
	margin-right: .75em;
}

body.icon-mode .riskContainer {
	flex-direction: column;
}

#filterButtons {
	display: flex;
	flex-wrap: wrap;
}
#filterButtons > *{
	margin: .125em;
}
.opImgWrapper[data-rarity]:after {
	position: absolute;
	content: '';
	top:0;
	left:0;
	right:0;
	bottom:0;
	border-radius: .2em;
	border-bottom: .2em solid black;
}
.opImgWrapper[data-rarity='5']:after {
	border-bottom: .2em solid rgba(255, 102, 0, 1);
}
.opImgWrapper[data-rarity='4']:after {
	border-bottom: .2em solid rgba(255, 174, 0, 1);
}
.opImgWrapper[data-rarity='3']:after {
	border-bottom: .2em solid rgba(219, 177, 219, 1);
}
.opImgWrapper[data-rarity='2']:after {
	border-bottom: .2em solid rgba(0, 178, 246, 1);
}
.opImgWrapper[data-rarity='1']:after {
	border-bottom: .2em solid rgba(220, 229, 55, 1);
}
.opImgWrapper[data-rarity='0']:after {
	border-bottom: .2em solid rgba(159, 159, 159, 1);
}

